--- a/src/app/component/menu/track-list/track-list.less
+++ b/src/app/component/menu/track-list/track-list.less
@@ -38,6 +38,13 @@
   cursor: pointer;
 
 }
+.date{
+  color: @blue-color;
+}
+.dist{
+  font-size: 12px;
+}
+
 .color{
   margin-left: 5px;
   width: 24px;
@@ -47,7 +54,11 @@
 li{
   //padding: 8px;
   color: black;
-  border-bottom: 1px solid @main-border-color;
+  border-top: 1px solid @main-border-color;
+  &:not(:last-child){
+
+  }
+
 
 
   align-items: center;
@@ -57,6 +68,12 @@ li{
   .download{
     height: 30px;width: 30px;
     background: url("src/img/ico-download.png") no-repeat center;
+    background-size: 80%;
+    padding: 0;
+  }
+  .save{
+    height: 30px;width: 30px;
+    background: url("src/img/ico-save.png") no-repeat center;
     background-size: 80%;
     padding: 0;
   }
