--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -36,7 +36,7 @@ table {
       }
     }
     .satellite{
-      background: url("src/img/ico-satellite.png") no-repeat center;
+      background: url("src/img/ico-router.png") no-repeat center;
       width: 30px;
       height: 30px;
       opacity: 0.8;
@@ -70,7 +70,7 @@ table {
       .weather-ico{
         width: 40px;
         height: 40px;
-        background: url("src/img/weather-ico.png") no-repeat center;
+        background: url("src/img/ico-weather.png") no-repeat center;
         background-size: 80%;
       }
     }
