--- a/src/app/component/journal-component/journal.component.less
+++ b/src/app/component/journal-component/journal.component.less
@@ -31,7 +31,7 @@
   font: 30px/15px bold;
 }
 .title-row{
-  margin: 15px 0;
+  margin: 15px;
   display: flex ;
   justify-content: space-between;
   align-items: center;
@@ -50,7 +50,7 @@
 }
 .scroll{
   //max-height: 60%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 .row{
