--- a/src/app/component/journal-component/one-track.component/one-track.component.less
+++ b/src/app/component/journal-component/one-track.component/one-track.component.less
@@ -1,7 +1,7 @@
 @import "../../../css/constant";
 :host{
   display: block;
-  margin: 15px;
+  margin-bottom: 15px;
 }
 .content{
   display: flex;
@@ -10,6 +10,9 @@
 .info>div{
   margin-bottom:  15px;
 
+}
+.info{
+  padding: 0 15px;
 }
 
 .date{
