--- a/src/app/component/all-user/all-user.component.jade
+++ b/src/app/component/all-user/all-user.component.jade
@@ -6,6 +6,8 @@ table
                 img([src]="user.image || 'src/img/no-avatar.gif' ")
             td {{user.name}}
             td
+                .ico-chat((click)="startChat(user.id)")
+            td
                 .invite(*ngIf="!isFriend(user)")
                     template([ngIf]="!isInviteActive(user)" )
                         div((click)="sendInvite(user)") Отправть запрос
