--- a/src/app/component/all-user/all-user.component.less
+++ b/src/app/component/all-user/all-user.component.less
@@ -14,7 +14,6 @@
     color: gray;
   }
 }
-
 td{
   width: 33.3%;
   border-bottom: 1px solid #cfdcef;
@@ -25,9 +24,28 @@ td{
 }
 table{
   width: 100%;
+  td:nth-child(1){
+    min-width: 50px;
+    width: 20%;
+  }
+  td:nth-child(2){
+    width: 20%;
+    padding: 0 5px;
+  }
+  td:nth-child(3){
+    min-width: 50px;
+    width: 20%;
+  }
 }
 img{
   width: 60px;
   height: 60px;
   display: block;
+}
+.ico-chat{
+  width: 30px;
+  height: 30px;
+  background: url("./src/img/ico-chat.png") no-repeat center;
+  background-size: 80%;
+  cursor: pointer;
 }
