--- a/src/app/component/friends-component/friends-component.jade
+++ b/src/app/component/friends-component/friends-component.jade
@@ -12,6 +12,9 @@ div.content
                                 img([src]="user.image || 'src/img/no-avatar.gif' ")
                             td {{user.name}}
                             td
+                                .ico-chat((click)="startChat(user.id)")
+
+                            td
                                 .invite((click)="onDelFriend(user)")
                                     | Удалить
 
@@ -36,17 +39,3 @@ div.content
                 .border-hidden
 
             router-outlet
-            //.row(*ngIf="allUsers.length")
-                h4 Все участники
-                table
-                    tbody
-                        tr(*ngFor="let user of allUsers\; let i = index")
-                            td
-                                img([src]="user.image || 'src/img/no-avatar.gif' ")
-                            td {{user.name}}
-                            td
-                                .invite( *ngIf="!isFriend(user)")
-                                    template([ngIf]="!isInviteActive(user)", )
-                                        div((click)="sendInvite(user)") Отправть запрос
-                                    template([ngIf]="isInviteActive(user)")
-                                        div((click)="onCancelInvite(user)") Запрос отправлен (отменить)
