--- a/src/app/component/friends-component/friends-component.jade
+++ b/src/app/component/friends-component/friends-component.jade
@@ -12,7 +12,7 @@ div.content
                                 img([src]="user.image || 'src/img/no-avatar.gif' ")
                             td {{user.name}}
                             td
-                                .ico-chat((click)="startChat(user.id)")
+                                .ico-chat((click)="startChat(user)")
 
                             td
                                 .invite((click)="onDelFriend(user)")
