--- a/src/app/component/chat-component/chat-room/chat-room.component.jade
+++ b/src/app/component/chat-component/chat-room/chat-room.component.jade
@@ -1,7 +1,9 @@
 .close((click)="onClose()") &times;
 .title {{name}}
 .message(*ngFor="let message of messages; let i = index;", [ngClass]="{'my':message.isMy,'opponent':!message.isMy }")
-     .text {{message.text}}
+    .date {{message.date | date: 'dd/MM/yyyy HH:mm:ss'}}
+    .text {{message.text}}
+
 .text-area-container
     textarea([(ngModel)]="myActiveMess.text")
 .buttons-container
