--- a/src/app/component/chat-component/chat-room/chat-room.component.less
+++ b/src/app/component/chat-component/chat-room/chat-room.component.less
@@ -13,6 +13,7 @@
 }
 textarea{
   width: 100%;
+  height: 80px;
 }
 .buttons-container{
   display: flex;
@@ -23,11 +24,17 @@ textarea{
 }
 .message{
   margin-bottom: 5px;
-  &.my>*{
+  &>.date{
+    color: gray;
+    font-size: 10px;
+  }
+  &.my{
     margin-left: 15px;
+  }
+  &.my>.text{
     color: @blue-color;
   }
-  &.opponent>*{
+  &.opponent>.text{
     color: @green-color
   }
 }
