--- a/src/app/component/all-user/all-user.component.less
+++ b/src/app/component/all-user/all-user.component.less
@@ -48,4 +48,15 @@ img{
   background: url("./src/img/ico-chat.png") no-repeat center;
   background-size: 80%;
   cursor: pointer;
+  position: relative;
+  .ico-un-viewed{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-radius: 50%;
+    padding: 5px;
+    font: 12px/6px sans-serif;
+    font-size: 10px;
+    background: @green-color;
+  }
 }
