--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -8,7 +8,7 @@
 @main-text-color: #444a56;
 @danger-background: red;
 @warning-background: #ffd263;
-@orange-color: #ff6600;
+@orange-color: #ff8b15;
 @success-background: #7ddc74;
 @box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
 *{
