--- a/index.jade
+++ b/index.jade
@@ -5,14 +5,14 @@ html(lang='en')
 
         meta(name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no", property="og:image")
 
-        link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
+        link(rel="shortcut icon" href="http://178.62.44.54/src/img/icon.png" type="image/png")
         base(href="/")
-        link(rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css")
+        link(rel="stylesheet" href="http://178.62.44.54/lib/mapbox-gl/mapbox-gl.css")
         //script(src='node_modules/core-js/client/shim.min.js')
-        script(src='node_modules/zone.js/dist/zone.min.js')
-        script(src='node_modules/reflect-metadata/Reflect.js')
-        script(src='node_modules/systemjs/dist/system.js')
-        script(src='systemjs.config.js')
+        script(src='http://178.62.44.54/node_modules/zone.js/dist/zone.min.js')
+        script(src='http://178.62.44.54/node_modules/reflect-metadata/Reflect.js')
+        script(src='http://178.62.44.54/node_modules/systemjs/dist/system.js')
+        script(src='http://178.62.44.54/systemjs.config.js')
         script.
             System.import('app').catch(function(err){ console.error(err); });
         style.
