--- a/index.jade
+++ b/index.jade
@@ -12,7 +12,7 @@ html(lang='en')
         script(src='http://178.62.44.54/node_modules/zone.js/dist/zone.min.js')
         script(src='http://178.62.44.54/node_modules/reflect-metadata/Reflect.js')
         script(src='http://178.62.44.54/node_modules/systemjs/dist/system.js')
-        script(src='http://178.62.44.54/systemjs.config.js')
+        script(src='systemjs.config.js')
         script.
             System.import('app').catch(function(err){ console.error(err); });
         style.
