--- a/index.jade
+++ b/index.jade
@@ -6,7 +6,7 @@ html(lang='en')
         meta(name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no", property="og:image")
 
         link(rel="shortcut icon" href="http://178.62.44.54/src/img/icon.png" type="image/png")
-        base(href="/")
+        base(href="/Atlas-Angular2/")
         link(rel="stylesheet" href="http://178.62.44.54/lib/mapbox-gl/mapbox-gl.css")
         //script(src='node_modules/core-js/client/shim.min.js')
         script(src='http://178.62.44.54/node_modules/zone.js/dist/zone.min.js')
