--- a/src/app/component/chat-component/chat-room/chat-room.component.less
+++ b/src/app/component/chat-component/chat-room/chat-room.component.less
@@ -2,7 +2,10 @@
 :host{
   background: rgba(255,255,255, 0.8);
   display: block;
+  width: 100%;
   min-width: 300px;
+  max-width: 300px;
+
   padding: 15px;
   position: relative;
 
