--- a/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.jade
+++ b/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.jade
@@ -5,7 +5,8 @@
         .dist   {{track.distance}} km
     .del( (click)='hideTrack()') &#215;
 .action
-    .download((click)="track.download()")
+    //.download((click)="track.download()")
+    .download((click)="onDownload()")
     .save((click)="saveChange()")
     .route-points((click)="track.showSrcPoint()")
     .go( (click)="onGo(track)") Play &#9658;
