--- a/index.jade
+++ b/index.jade
@@ -123,5 +123,37 @@ html(lang='en')
                 border: 1px dotted blue;
             }
 
+            .ico-z {
+                width: 40px;
+                height: 40px;
+                background: url("src/img/ico-z.png") no-repeat center;
+                background-size: 100%;
+                animation: ROTATE 2s infinite;
+                opacity: 0.5;
+                animation-timing-function: linear;
+
+            }
+
+            .prelaoder {
+                margin: 40px auto;
+            }
+
+            .prelaoder > div {
+                margin: auto;
+                text-align: center;
+            }
+
+            @keyframes ROTATE {
+                0% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
 body
-        my-app Loading...
+    my-app
+        .prelaoder
+            div Loading...
+            .ico-z
