--- a/src/app/component/profile/profile.component.less
+++ b/src/app/component/profile/profile.component.less
@@ -40,6 +40,21 @@ img{
   font-size: 20px;
   font: 30px/15px bold;
 }
+.row.border{
+  border-bottom: 1px solid @main-border-color;
+}
+.load-img{
+  min-height: 100px;
+}
+.ico-strava{
+  width: 80px;
+  height: 20px;
+  background: url("./src/img/ico-strava-text.png") no-repeat center;
+  background-size: 100%;
+}
+a{
+  font-size: 14px;
+}
 @media screen and (max-width: 600px){
   .content{
     position: relative;
