--- a/src/app/component/friends-component/friends-component.less
+++ b/src/app/component/friends-component/friends-component.less
@@ -39,6 +39,7 @@ h4{
     color: gray;
   }
 }
+
 .content{
   position: absolute;
   background: rgba(255, 255, 255, 0.9);
@@ -75,6 +76,7 @@ h4{
 }
 
 table{
+
   width: 100%;
   td:nth-child(1){
     min-width: 50px;
@@ -125,6 +127,9 @@ img{
   font-size: 10px;
   background: @orange-color;
   box-shadow: 0 0 4px white;
+}
+.row{
+  margin: 0;
 }
 @media screen and (max-width: 600px){
   .content{
