--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -48,7 +48,7 @@
   &.center{
     align-items: center;
   }
-  .cell{
+  .flex-cell{
     padding: 0 10px;
   }
   &.space-between{
@@ -68,7 +68,6 @@ button, .button{
   border-radius: 2px;
   cursor: pointer;
   outline:none;
-  font-weight: bold;
  // box-shadow: 1px 2px 5px rgba(0,0,0,0.3);
   &:active{
     color: #999999;
