--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -51,6 +51,9 @@
   .flex-cell{
     padding: 0 10px;
   }
+  &.flex-end{
+    justify-content: flex-end;
+  }
   &.space-between{
     justify-content: space-between;
   }
