--- a/src/app/component/strava-component/strava-component.less
+++ b/src/app/component/strava-component/strava-component.less
@@ -73,6 +73,17 @@ table.strava{
     }
   }
 }
+table.athlete{
+  width: 100%;
+  td{
+    vertical-align: middle;
+    padding: 10px 5px;
+  }
+}
+.profile{
+  width: 80px;
+  height: 80px;
+}
 .input{
   width: 100%;
 }
