--- a/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.jade
+++ b/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.jade
@@ -1,12 +1,19 @@
+.close((click)="hideTrack()") &times;
 .title
     .color([style.background]="track.color")
-    .info
-        .date {{track.date | date: 'dd/MM/yyyy'}}
-        .dist   {{track.distance}} km
-    .del( (click)='hideTrack()') &#215;
+    .date {{track.date | date: 'dd/MM/yyyy'}}
+
+
+.info  Дистанция
+    b {{track.distance}} km
+.info Точек
+    b {{track.points.length}}
 .action
-    //.download((click)="track.download()")
+    .route-points((click)="track.showSrcPoint()", title='Показать исходные точки')
+    .go( (click)="onGo(track)") Play &#9658;
+.action
     .download((click)="onDownload()", title='Скачать на комп')
     .save((click)="saveChange()", title="сохранить трек")
-    .route-points((click)="track.showSrcPoint()")
-    .go( (click)="onGo(track)") Play &#9658;
+    .strava-export((click)="stravaExport()", title="отправить в Strava")
+
+
