--- a/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.less
+++ b/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.less
@@ -4,12 +4,18 @@
   border-top: 1px solid @main-border-color;
   align-items: center;
   display: block;
+  position: relative;
 }
 
-.del{
-  cursor: pointer;
-  display: block;
+.close{
+  position: absolute;
+  right: 0;
+  top: 0;
   color: darkred;
+  cursor: pointer;
+  padding: 5px;
+  font-size: 20px;
+  font: 30px/15px bold;
 }
 .go{
   cursor: pointer;
@@ -22,11 +28,22 @@
     box-shadow: inset 0 0 20px black;
   }
 }
+.info{
+  margin: 10px 5px;
+
+}
+b{
+  margin-left: 5px;
+}
 .title, .action{
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 8px 0;
+
+}
+.title{
+  margin-right: 30px;
 }
 .route-points{
   background: url("src/img/ico-route-points.png") no-repeat center;
@@ -51,15 +68,26 @@
 }
 
 
-  .download{
-    height: 30px;width: 30px;
-    background: url("src/img/ico-download.png") no-repeat center;
-    background-size: 80%;
-    padding: 0;
-  }
-  .save{
-    height: 30px;width: 30px;
-    background: url("src/img/ico-save.png") no-repeat center;
-    background-size: 80%;
-    padding: 0;
-  }
+.download{
+  height: 30px;width: 30px;
+  background: url("src/img/ico-download.png") no-repeat center;
+
+  padding: 0;
+}
+.save{
+  height: 30px;width: 30px;
+  background: url("src/img/ico-save.png") no-repeat center;
+
+  padding: 0;
+}
+.strava-export{
+  height: 30px;width: 30px;
+  background: url("src/img/ico-strava.png") no-repeat center;
+
+  padding: 0;
+}
+.strava-export, .save, .download{
+  width: 30%;
+  cursor: pointer;
+  background-size: auto 80%;
+}
