--- a/src/app/component/strava-component/strava-component.jade
+++ b/src/app/component/strava-component/strava-component.jade
@@ -7,7 +7,7 @@ div.content
                 | В разработке *
         .flex.center.row.space-between
             .flex-cell
-                .ico-strava
+                .ico-strava-text
         .flex.row.center(*ngIf="authInProgress")
             .flex-cell
                 | Авторизация..
@@ -38,17 +38,21 @@ div.content
                 td
                     label.flex-cell() Client Secret:
                 td
-                    input.input([(ngModel)]="stravaClientSecret", name="stravaClientSecret")
+                    input.input([(ngModel)]="stravaClientSecret", name="stravaClientSecret", type="password")
             //tr
                 td
                     label.flex-cell() Code:
                 td
                     |{{code}}
 
+        .flex
+            .flex-cell(*ngFor="let track of docsFor\; let i = index" )
+                .ico-routs(title="отправить", (click)="sendTrackToStrava(track)") {{track.date | date: 'dd/MM/yyyy'}}
+
         .flex.flex-end
             .flex-cell
-                .button.primary(*ngIf="!code")
+                .button.primary(*ngIf="!authInProgress")
                     a([ngClass]="{'blue':stravaClientId && stravaClientSecret}",  href="{{stravaHref}}", (click)="$event.preventDefault(); goToStrava()") Авторизация
-                .button.primary(*ngIf="code", (click)="stravaOauth()") Авторизацияjk
+                //.button.primary(*ngIf="code", (click)="stravaOauth()") Авторизацияjk
 
 
