--- a/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.less
+++ b/src/app/component/menu/track-list/one-item-track-component/one-item-track.component.less
@@ -30,7 +30,6 @@
 }
 .info{
   margin: 10px 5px;
-
 }
 b{
   margin-left: 5px;
@@ -39,8 +38,10 @@ b{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px 0;
-
+  margin: 10px -10px;
+  &>*{
+    padding: 0 10px;
+  }
 }
 .title{
   margin-right: 30px;
@@ -51,7 +52,6 @@ b{
   width: 30px;
   height: 30px;
   cursor: pointer;
-
 }
 .date{
   color: @blue-color;
@@ -64,6 +64,7 @@ b{
   margin-left: 5px;
   width: 24px;
   height: 24px;
+
   border-radius: 50%;
 }
 
