--- a/src/app/component/toast/toast-component.jade
+++ b/src/app/component/toast/toast-component.jade
@@ -1,2 +1,2 @@
 .my-animation(*ngFor="let item of messages", [ngClass]="item.className", (click)="item.remove()")
-        | {{item.text}}
+        | {{item.translate ? (item.translate | translate) : item.text}}
