--- a/src/app/component/all-user/all-user.component.jade
+++ b/src/app/component/all-user/all-user.component.jade
@@ -8,7 +8,7 @@ table
                 include ../friends-component/user-data-container.jade
             td
                 .invite(*ngIf="!isFriend(user)")
-                    template([ngIf]="!isInviteActive(user)" )
+                    ng-template([ngIf]="!isInviteActive(user)" )
                         div((click)="sendInvite(user)") Отправть запрос
-                    template([ngIf]="isInviteActive(user)")
+                    ng-template([ngIf]="isInviteActive(user)")
                         div((click)="onCancelInvite(user)") Запрос отправлен (отменить)
